--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -12,7 +12,7 @@ body {
   font-size: var(--body-font-size);
   line-height: var(--body-line-height);
   color: var(--body-color);
-  background-color: var(--body-bg);
+  background-color: var(--black);
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
