--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,7 +13,6 @@
   --dark-poole-002: hsl(0, 0%, 85%);
   --dark-poole-link-color: rgba(255, 255, 255, 0.75);
   --dark-poole-link-hover: #fff;
-  --black: #000;
 
   --red: #fa5252;
   --pink: #e64980;
@@ -26,6 +25,7 @@
   --green: #40c057;
   --yellow: #fab005;
   --orange: #fd7e14;
+  --black: #000;
 
   --blue-300: #74c0fc;
   --blue-400: #4dabf7;
@@ -36,7 +36,7 @@
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --body-font-size: 20px;
   --body-line-height: 1.5;
-  --body-color: var(--black);
+  --body-color: var(--gray-700);
   --body-bg: #fff;
 
   --link-color: var(--blue);
