--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,6 @@ layout: compress
 		<li><a href="/archive/">archive</a></li>
 		<li><a href="/tags/">tags</a></li>
 		<li><a href="/categories/">categories</a></li>
-		<li><a href="/styles/">styles</a></li>
 		</ul>
 		</div>
 		
@@ -34,8 +33,7 @@ layout: compress
       </main>
 
       <footer class="footer">
-        <p><a href="https://github.com/essentialenemy/noir/">Noir</a> theme for <a href="https://jekyllrb.com/">Jekyll</a> by <a href="https://essentialenemy.com/">Victor Johnson</a>
-		<br><a href="https://github.com/essentialenemy/noir/blob/master/LICENSE.md">Released under MIT License</a></p>
+        <p>Github: <a href="http://github.com/BlueDiablos1234">BlueDiablos1234</a></p>
       </footer>
     </div>
 
