Fixed header and colors

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@ layout: compress
       </main>
 
       <footer class="footer">
-        <p>Github: <a href="http://github.com/BlueDiablos1234">BlueDiablos1234</a></p>
+        <p>My Github: <a href="http://github.com/BlueDiablos1234">Github</a></p>
       </footer>
     </div>
 
