Changed Archive to posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@ layout: compress
 		<!-- Change navigation links here -->
 		<div class="navigation">
 		<ul id="navigation-list">
-		<li><a href="/archive/">archive</a></li>
+		<li><a href="/posts/">posts</a></li>
 		<li><a href="/tags/">tags</a></li>
 		<li><a href="/categories/">categories</a></li>
 		</ul>
