Fixed code blocks

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -10,7 +10,7 @@
 	white-space: nowrap;
 	
 @media (prefers-color-scheme: dark) {
-    background-color: #212c2d;
+    background-color: #000;
 	color: $code-dark;
 	}
 }
