--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,9 @@ layout: default
   {% else %}
 <h1 class="post-title">{{ page.title | smartify }}</h1>
   {% endif %}
-
-  <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date_to_long_string: "ordinal", "US" }}
+  {% if post.title != "Introduction" %}
+    <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date_to_long_string: "ordinal", "US" }}
+  {% endif %}
   {% if post %}
   {% assign categories = post.categories %}
   {% else %}
