--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,7 @@ layout: default
   {% else %}
 <h1 class="post-title">{{ page.title | smartify }}</h1>
   {% endif %}
+  <p>{{ page.title }}</p>
   {% if post.title != "Introduction" %}
     <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date_to_long_string: "ordinal", "US" }}
   {% endif %}
