--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,8 @@ layout: compress
 		<li><a href="/posts/">posts</a></li>
 		<li><a href="/tags/">tags</a></li>
 		<li><a href="/categories/">categories</a></li>
+		<li><a href="/introduction">introduction</a></li>
+    
 		</ul>
 		</div>
 		
