--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,10 +20,10 @@ layout: compress
 		<!-- Change navigation links here -->
 		<div class="navigation">
 		<ul id="navigation-list">
-		<li><a href="/posts/">posts</a></li>
-		<li><a href="/tags/">tags</a></li>
-		<li><a href="/categories/">categories</a></li>
-		<li><a href="/introduction">introduction</a></li>
+    <li><a href="/introduction">Introduction</a></li>
+		<li><a href="/posts/">Posts</a></li>
+		<li><a href="/tags/">Tags</a></li>
+		<li><a href="/categories/">Categories</a></li>
     
 		</ul>
 		</div>
@@ -38,16 +38,5 @@ layout: compress
         <p>My Github: <a href="http://github.com/BlueDiablos1234">Homepage</a></p>
       </footer>
     </div>
-
-    {% if site.ga_analytics %}
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-       ga('create', '{{ site.ga_analytics }}', 'auto');
-       ga('send', 'pageview');
-     </script>
-    {% endif %}
   </body>
 </html>
